--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <title>Cuvinte</title>
   <link rel="manifest" href="manifest.json">
-  <link rel="manifest" href="app.webmanifest" />
+  <link rel="manifest" href="/app.webmanifest" />
   <script>
     var webRenderer = "auto";
     var useColorEmoji = false;
